--- a/demo.html
+++ b/demo.html
@@ -2,9 +2,136 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Timeline Plugin</title>
+    <link rel="stylesheet" href="altrone.css">
+    <link rel="stylesheet" href="altrone-timeline.css">
 </head>
 <body>
-$END$
+<h1>Standart Timeline</h1>
+<div class="timeline">
+    <div class="timeline__section">
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        <div class="timeline__section__circle"></div>
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+    </div>
+    <div class="timeline__section">
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        <div class="timeline__section__label">2 декабря</div>
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+    </div>
+    <div class="timeline__section">
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        <div class="timeline__section__circle"></div>
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+    </div>
+</div>
+
+<h1>Vertical Timeline</h1>
+<div class="timeline timeline--vertical">
+    <div class="timeline__section">
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        <div class="timeline__section__circle"></div>
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+    </div>
+    <div class="timeline__section">
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        <div class="timeline__section__label">12 DEC 2017</div>
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+    </div>
+    <div class="timeline__section">
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        <div class="timeline__section__circle"></div>
+        <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+            dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+            quibusdam quo, reiciendis repellendus totam ut?</p></div>
+    </div>
+</div>
+
+<div class="d-gray-bg">
+    <h1 class="u-gray-fg">Inverted Timeline</h1>
+    <div class="timeline timeline--invert">
+        <div class="timeline__section">
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+            <div class="timeline__section__circle"></div>
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        </div>
+        <div class="timeline__section">
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+            <div class="timeline__section__label">2 декабря</div>
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        </div>
+        <div class="timeline__section">
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+            <div class="timeline__section__circle"></div>
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        </div>
+    </div>
+
+    <h1 class="u-gray-fg">Inverted Vertical Timeline</h1>
+    <div class="timeline timeline--vertical timeline--invert">
+        <div class="timeline__section">
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+            <div class="timeline__section__circle"></div>
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        </div>
+        <div class="timeline__section">
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+            <div class="timeline__section__label">2 декабря</div>
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        </div>
+        <div class="timeline__section">
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+            <div class="timeline__section__circle"></div>
+            <div class="timeline__section__item"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad assumenda
+                dolorum eius itaque laudantium magnam nobis praesentium quod tempora voluptas. Ab animi delectus itaque
+                quibusdam quo, reiciendis repellendus totam ut?</p></div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
